Update 1. About HTML.md

--- a/HTML/1. About HTML.md
+++ b/HTML/1. About HTML.md
@@ -11,8 +11,9 @@ HTML is the language used for web documents. It is not a programming language, b
 
 
 ### The General Rule
-HTML encapsulate contents by tags. For example:   
+HTML encapsulate contents between elements. For example:   
 ``<tagName> Some Content </tagName>``
+###### [You can see almost all HTML elements here.](https://developer.mozilla.org/en-US/docs/Web/HTML/Element)
 
 
 ### HTML History and Development
